[package]
name = "task-collection"
version = "0.0.3"
authors = ["Zoey Riordan <zoey@dos.cafe>"]
edition = "2018"
license = "MIT OR Apache-2.0"
description = "Types for managing and waiting on groups of tasks"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures-util = { version = "0.3", default-features = false }
smol = { version = "1.0", optional = true }
tokio = { version = "1.0", optional = true, default-features=false, features = ["rt"] }
async-std = { version = "1.0", optional = true }

[features]
default = ["alloc"]
alloc = []

[dev-dependencies]
smol = "1.2"
tokio = { version = "1.0", features = ["full"] }
futures = "0.3"
async-std = "1.8"
